# recursive-dialectical-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  recursive-dialectical-engine-proposal.md
docs/: api-reference.md  architecture.md  learnings.md
examples/: dashboard.py  long_document.py
examples/ablations/: arbiter_strength.py  context_externalization.py  fixed_vs_adaptive.py  harness.py  model_pairing_optimization.py  orchestrator_strength.py  rde_gap_per_model.py  recursive_vs_single.py  same_vs_cross_model.py  scaffolding_calibration.py  sub_lm_quality.py
examples/benchmarks/: analyze_results.py  rde_vs_vanilla.py  run_local_benchmarks.py  run_rlm_comparison.py
examples/training/: collect_training_data.py  evaluate_finetuned.py  format_for_gemini.py
paper/: rde-paper.md
rde/: __init__.py  arbiter.py  cli.py  engine.py  environment.py  models.py  normalizer.py  orchestrator.py  poc.py  trace.py
rde/benchmarks/: __init__.py  configs.py  datasets.py  runner.py  scoring.py
rde/prompts/: arbiter.py  orchestrator.py  repl.py  templates.py  traces.py
results/: rlm_comparison.json
scripts/: run_overnight_local.sh  run_vllm_mlx.sh
tests/: conftest.py  test_arbiter.py  test_benchmarks.py  test_engine.py  test_environment.py  test_extraction.py  test_integration.py  test_local_openai_provider.py  test_long_context.py  test_metrics.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_providers.py  test_recursion.py  test_repl_sandbox.py  test_repl_trace.py  test_sandbox.py  test_trace.py  test_training.py
(+36 files in other folders)
